# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-01-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make the C/C++ CloudI API include all processing time in the
      poll timeout value, when a poll timeout value is provided

2014-01-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service_quorum tests
    * Fix monkey_chaos bug for probability_request
    * Fix monkey_latency initialization bugs
    * Fix automatic_loading == true unloading of Erlang applications
      (to ignore the cloudi_core Erlang application)
    * Update proper
    * Update reltool_util
    * Update v3 ZeroMQ to 3.2.4

2014-01-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the add_prefix argument to cloudi_service_router

2014-01-13 Michael Truog   <mjtruog [at] gmail (dot) com>

    * When an external service is using the request_timeout_adjustment
      send a null response if the timeout was exceeded, to prevent extra
      data from being sent to the Erlang VM
    * Fix the java http_req test parsing
    * Fix cloudi_service_quorum absolute integer requirement
    * Add cloudi_service_router

2014-01-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix performance issues that have been creeping into
      cloudi_service_http_cowboy and apply the same fixes to
      cloudi_service_http_elli and cloudi_service_tcp

2014-01-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make {error, _} results from the cloudi module consistent with the
      {error, _} results from the cloudi_service module
      ('timeout' is used instead of cpg specific Reasons)
    * Change cloudi_service_tcp, cloudi_service_http_cowboy, and
      cloudi_service_http_elli to use the cloudi module to avoid making
      the parent Erlang process a bottleneck
    * Add the websocket_connect and websocket_disconnect arguments to
      cloudi_service_http_cowboy, so that service requests can be sent